syntax = "proto3";

package crm.eventstore.v1;

option csharp_namespace = "Crm.Eventstore.V1";
option go_package = "eventstorev1";
option java_multiple_files = true;
option java_outer_classname = "EventStoreProto";
option java_package = "com.crm.eventstore.v1";
option objc_class_prefix = "CEX";
option php_namespace = "Crm\\Eventstore\\V1";

// Event is the core entity of the event-store.
message Event {
  string id = 1;
  string type = 2;
  string aggregate_id = 3;
  string aggregate_type = 4;
  string payload = 5;
  int64 timestamp_us = 6;
  string channel = 7;
}

// EventFilter does filtering.
message EventFilter {
  string event_id = 1;
  string aggregate_id = 2;
}
